# openenclave

./: CHANGELOG.md
api/: globals.html  globals_eval.html  result_8h.html  result_8h_a082933eedd558d91d480c569fa8d1a48.html  result_8h_source.html
api/search/: all_9.js
enclave/: asym_keys.c
enclave/core/sgx/: enter.S  exception.c  thread.c
host/crypto/bcrypt/: key.c
host/crypto/openssl/: key.c
host/sgx/: calls.c  create.c  elf.c  enclave.c  enclave.h  enclavemanager.c  enter.c  exception.c  exception.h
host/sgx/linux/: exception.c
include/openenclave/internal/: calls.h  elf.h
libc/: CMakeLists.txt  futex.c  list.h
tests/: CMakeLists.txt
tests/posix/: CMakeLists.txt  posix.edl  run  runn
tests/posix/enc/: CMakeLists.txt  enc.c
tests/posix/host/: host.c
tests/posix/threads/: posix.edl  run  rungdb  runn
tests/posix/threads/enc/: CMakeLists.txt  enc.c  pthread_cancel.c  pthread_cancel_repro.c  pthread_cond.c  pthread_cond_smasher.c  pthread_condattr_setclock.c  pthread_mutex.c  pthread_mutex_pi.c  pthread_once_deadlock.c  pthread_robust.c  pthread_rwlock_ebusy.c  pthread_tsd.c  stubs.c  test.c  test.h  test_pthread_cancel1.c  test_pthread_cancel2.c  test_pthread_cancel3.c  test_pthread_cancel4.c
tests/posix/threads/enc/functional/: argv.c  basename.c  clocale_mbfuncs.c  clock_gettime.c  crypt.c  dirname.c  dlopen.c  dlopen_dso.c  env.c  fcntl.c  fdopen.c  fnmatch.c  fscanf.c  functional.c  fwscanf.c  iconv_open.c  inet_pton.c  ipc_msg.c  ipc_sem.c  ipc_shm.c  mbc.c  memstream.c  popen.c  pthread_cancel-points.c  pthread_cancel.c  pthread_cond.c  pthread_mutex.c  pthread_mutex_pi.c  pthread_robust.c  pthread_tsd.c  qsort.c  random.c  search_hsearch.c  search_insque.c  search_lsearch.c  search_tsearch.c  sem_init.c  sem_open.c  setjmp.c  snprintf.c  (+36 more)
tests/posix/threads/enc/regression/: daemon-failure.c  dn_expand-empty.c  dn_expand-ptr-0.c  execle-env.c  fflush-exit.c  fgets-eof.c  fgetwc-buffering.c  flockfile-list.c  fpclassify-invalid-ld80.c  ftello-unflushed-append.c  getpwnam_r-crash.c  getpwnam_r-errno.c  iconv-roundtrips.c  inet_ntop-v4mapped.c  inet_pton-empty-last-field.c  iswspace-null.c  lrand48-signextend.c  lseek-large.c  malloc-0.c  malloc-brk-fail.c  malloc-oom.c  mbsrtowcs-overflow.c  memmem-oob-read.c  memmem-oob.c  mkdtemp-failure.c  mkstemp-failure.c  printf-1e9-oob.c  printf-fmt-g-round.c  printf-fmt-g-zeros.c  printf-fmt-n.c  pthread-robust-detach.c  pthread_atfork-errno-clobber.c  pthread_cancel-sem_wait.c  pthread_cond-smasher.c  pthread_cond_wait-cancel_ignored.c  pthread_condattr_setclock.c  pthread_create-oom.c  pthread_exit-cancel.c  pthread_exit-dtor.c  pthread_once-deadlock.c  (+29 more)
tests/posix/threads/host/: CMakeLists.txt  host.c  posix.c
tests/switchless/host/: host.c
tests/tools/oesign-engine/test-enclave/: CMakeLists.txt  oesign-test.py
tools/oesign/: main.c
